--- a/app/src/App.css
+++ b/app/src/App.css
@@ -5,6 +5,12 @@
     color: #616161;
 }
 
+body,
+html,
+#root {
+    height: 100%;
+}
+
 :root {
     --white: #ffffff;
     --pri-color-main: #b2dfdb;
@@ -19,19 +25,18 @@
 
 /* NAVBAR */
 img#logo {
-    padding-right: 5%;
+    /* padding-right: 5%;
     margin-top: -0.5vh;
-    height: 5vmin;
+    height: 5vmin; */
 }
 
 .color-nav {
     background-color: #ffecb3;
-    height: 8vh;
-    font-size: 2.5vmin;
+    /* height: 9%; */
 }
 
 .navbar-brand#site-name {
-    font-size: 3.75vmin;
+    font-size: 1.75em;
     letter-spacing: 1.8px;
     font-weight: 700;
     color: var(--navbar-text);
@@ -39,7 +44,7 @@ img#logo {
 
 .navbar-text#current-user {
     padding-right: 5%;
-    font-size: 2vmin;
+    font-size: 1em;
     letter-spacing: 1.8px;
     font-weight: 700;
     color: var(--navbar-text);
@@ -47,7 +52,7 @@ img#logo {
 
 #basic-navbar-nav a {
     padding-left: 30%;
-    font-size: 2vmin;
+    font-size: 1em;
     letter-spacing: 1.8px;
     font-weight: 700;
     color: var(--navbar-text);
@@ -55,12 +60,12 @@ img#logo {
 }
 
 #basic-navbar-nav a:hover {
-    font-size: 2.15vmin;
+    font-size: 1.05em;
     color: var(--navbar-text-hover);
 }
 
 #basic-navbar-nav > a {
-    font-size: 2vmin;
+    font-size: 1em;
     padding-left: 16px;
 }
 
@@ -72,22 +77,22 @@ form {
 
 input.form-control {
     width: 25%;
-    height: 5vh;
+    height: 2.1em;
     margin: auto;
 }
 
 div.form-group {
     text-align: center;
-    font-size: 2.5vmin;
+    font-size: 1.15em;
     font-weight: 500;
 }
 
 /* LOGIN AND SIGNUP PAGES */
 div#signup-form {
-    display: flex;
-    margin-top: 15vh;
-    margin-bottom: 15vh;
-    overflow: auto;
+    /* display: flex;
+    margin-top: 7em;
+    margin-bottom: 7em;
+    overflow: auto; */
 }
 
 #signup-form table {
@@ -113,63 +118,66 @@ div#signup-form {
 }
 
 div#login-form {
-    display: flex;
-    margin-top: 30vh;
-    margin-bottom: 30vh;
+    /* display: flex;
+    margin-top: 11em;
+    margin-bottom: 11em;
     overflow: auto;
-    flex-direction: column;
+    flex-direction: column; */
 }
 
 div#creation-status {
     margin: auto;
-    margin-bottom: 5vh;
+    margin-bottom: 2em;
 }
 
 #login-submit,
 #signup-submit {
-    height: 5vh;
+    height: 2.1em;
     padding: 0;
     margin: auto;
-    margin-top: 4vh;
-    margin-bottom: 10vh;
+    margin-top: 1.75em;
+    margin-bottom: 1.75em;
     width: 25%;
-    font-size: 2.5vmin;
+    font-size: 1.15em;
     font-weight: 650;
 }
 
 /* LANDING PAGE */
-#landing-buttons {
+#landing-buttons,
+#login-form,
+#signup-form {
     display: flex;
-    flex-direction: row;
-    height: 100vh;
     align-items: center;
+    justify-content: center;
+    min-height: 100%;
+    overflow: auto;
+    padding-top: 5%;
+    padding-bottom: 5%;
 }
 
 #login-button,
 #signup-button {
     padding: 0;
     margin: auto;
-    margin-top: 10vh;
-    margin-bottom: 10vh;
+    height: 2.1em;
     width: 25%;
     display: block;
-    font-size: 2.5vmin;
+    font-size: 1.15em;
     font-weight: 650;
 }
 
 #landing-buttons #login-button {
-    margin-right: 1vw;
+    margin-right: 1%;
 }
 
 #landing-buttons #signup-button {
-    margin-left: 1vw;
+    margin-left: 1%;
 }
 
 /* BUTTON STYLING */
 button.btn {
     letter-spacing: 2px;
     text-transform: uppercase;
-    height: 5%;
     border: none;
     border-radius: 35px;
     background-color: var(--pri-color-main);
@@ -202,12 +210,23 @@ button.btn:disabled {
     background-color: var(--pri-color-main);
 }
 
+/* PROFILE PAGE GENERALS */
+div.container#profile-container {
+    margin: 0;
+    max-width: 100%;
+    height: 90%;
+}
+
+#profile-row {
+    height: 100%;
+}
+
 /* PROFILE LEFT PANEL */
 img.profile-pic {
     object-fit: cover;
     border-radius: 50%;
-    height: 25vmin;
-    width: 25vmin;
+    /* height: 11em; */
+    width: 38%;
     overflow: hidden;
     border-radius: 50%;
     border: 3px solid var(--pri-color-dark);
@@ -227,38 +246,57 @@ img.profile-pic:hover {
     padding: 0;
     padding-right: 5px;
     padding-left: 5px;
-    height: 92vh;
     background-image: url("images/panel_bg.jpeg");
     background-size: cover;
     text-align: center;
+    overflow: auto;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 #profile-left figure {
-    padding-top: 6vh;
+    padding-top: 2em;
+    margin-bottom: 0;
 }
 
 #profile-left figcaption {
     text-transform: uppercase;
-    font-size: 2.5vmin;
+    font-size: 1.1em;
     letter-spacing: 1.8px;
     font-weight: 700;
-    padding-top: 2vh;
+    padding-top: 0.8em;
+}
+
+#profile-buttons {
+    width: 100%;
+}
+
+button.btn#edit-profile,
+button.btn#delete-profile {
+    padding: 0;
+    margin: auto;
+    width: 45%;
+    display: block;
+    font-size: 0.8em;
+    height: 23%;
 }
 
 button.btn#edit-profile {
-    padding: 0;
-    margin: 7% auto;
-    width: 45%;
-    display: block;
-    font-size: 1.8vmin;
+    margin-top: 2em;
+    margin-bottom: 1em;
+}
+
+button.btn#delete-profile {
+    margin-top: 1em;
+    margin-bottom: 2em;
 }
 
 /* PROFILE MIDDLE PANEL */
-
 #profile-middle {
     min-width: 33%;
-    height: 92vh;
-    max-height: 100%;
     padding: 0;
 
     display: flex;
@@ -268,11 +306,10 @@ button.btn#edit-profile {
 
 #pet-info,
 #owner-info {
-    font-size: 2.2vmin;
+    font-size: 1em;
     border: none;
     border-radius: 25px;
-    height: 42vh;
-    margin: 8%;
+    margin: 6%;
     background-image: url("images/panel_bg.jpeg");
     background-size: cover;
     border: 3px solid var(--pri-color-dark);
@@ -286,18 +323,26 @@ button.btn#edit-profile {
 }
 
 #pet-info {
-    height: 55vh;
+    height: 50%;
     margin-bottom: 0%;
+}
+
+#owner-info {
+    height: 32%;
 }
 
 #pet-info div,
 #owner-info div {
-    margin: 3%;
+    margin: 1em;
+}
+
+#profile-middle span {
+    word-break: break-word;
 }
 
 #pet-info img,
 #owner-info img {
-    height: 3vmin;
+    height: 1.3em;
     margin-right: 8px;
     /* width: 3.5vmin; */
 }
@@ -308,17 +353,17 @@ button.btn#edit-profile {
     transform: translateY(-3px);
 }
 
-div.panel-title {
-    font-size: 2.4vmin;
+header.panel-title {
+    font-size: 1.1em;
     letter-spacing: 1.8px;
     font-weight: 700;
+    margin-bottom: 0.5em;
+    text-transform: uppercase;
 }
 
 /* PROFILE RIGHT PANEL */
-
 #profile-right {
     min-width: 33%;
-    max-height: 100%;
     padding: 0;
 
     display: flex;
@@ -327,10 +372,10 @@ div.panel-title {
 }
 
 #pet-metrics {
-    font-size: 2.2vmin;
-    margin: 8%;
+    font-size: 1em;
+    margin: 6% 8%;
     margin-left: 0%;
-    height: 94%;
+    height: 87%;
     border: none;
     border-radius: 25px;
     border: 3px solid var(--pri-color-dark);
@@ -351,14 +396,54 @@ div.panel-title {
     transform: translateY(-3px);
 }
 
-div.container#profile-container {
-    margin: 0;
-    max-width: 100%;
-}
-
 #pet-metrics > div.pet-trait {
     margin: 3%;
-    margin-bottom: 0.75%;
+    margin-bottom: 0.25%;
+}
+
+#pet-interests {
+    padding-top: 5%;
+    padding-left: 15%;
+    padding-right: 15%;
+    text-align: center;
+}
+
+#pet-interests > div {
+    padding-top: 3%;
+}
+
+/* Medium devices (tablets, less than 992px) */
+@media (max-width: 991.98px) {
+    #pet-info,
+    #owner-info,
+    #pet-metrics {
+        font-size: 0.8em;
+    }
+    button.btn#edit-profile,
+    button.btn#delete-profile {
+        font-size: 0.6em;
+        width: 55%;
+    }
+    header.panel-title {
+        font-size: 1em;
+    }
+}
+
+/* Small devices (landscape phones, less than 768px) */
+@media (max-width: 767.98px) {
+    #pet-info,
+    #owner-info,
+    #pet-metrics {
+        font-size: 0.65em;
+    }
+    header.panel-title {
+        font-size: 0.9em;
+    }
+    button.btn#edit-profile,
+    button.btn#delete-profile {
+        font-size: 0.35em;
+        width: 65%;
+    }
 }
 
 /* EDIT PROFILE */
