--- a/app/src/App.css
+++ b/app/src/App.css
@@ -141,8 +141,8 @@ div#creation-status {
     justify-content: center;
     min-height: 100%;
     overflow: auto;
-    padding-top: 5%;
-    padding-bottom: 5%;
+    padding-top: 100px;
+    padding-bottom: 70px;
 }
 
 #login-form {
@@ -529,4 +529,8 @@ div.errorMessage {
     overflow-x: scroll;
     white-space: nowrap;
     text-align: center;
+}
+
+div.spinner-border {
+    display: none;
 }
