--- a/app/src/App.css
+++ b/app/src/App.css
@@ -659,7 +659,7 @@ li.saved-match-item {
     transition: all 0.25s ease 0s;
 }
 
-li.saved-match-item:hover {
+span.saved-match-item:hover {
     cursor: pointer;
     font-weight: 700;
 }
